2020-11-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/pic14/glue.c:
	  --code-loc support for pic14, patch by Georgi Georgiev.

2020-11-10 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/sim.src/mem.cc:
	  Fix spelling in debug message.
	  sim/ucsim/doc/index.html:
	  Reencode to UTF-8.

2020-11-04 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3141.c:
	  Disable test for mcs51 due to bug #3146.

2020-11-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-3141.c:
	  Fix bug #3141.
	* src/z80/gen.c,
	  support/regression/tests/shifts2.c:
	  Fix bug #3142.

2020-11-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  Disable array initalizer support for gbz80 in trunk, so the remining issues can be worked out in a branch instead.

2020-10-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3134.

2020-10-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.h:
	  Increase limits, patch by Oleg Endo <olegendo@gcc.gnu.org>.
	* support/regression/Makefile.in:
	  add pdk15-stack-auto ton default target.

2020-10-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c:
	  Improve register allocation for bitwise xor.

2020-10-26 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3135.c,
	  src/z80/ralloc2.cc:
	  Attempt to fix bug #3135.
	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c:
	  Improve register allocation for bitwise and, or.

2020-10-21 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c,
	* src/z80/mappings.i:
	  Fix bug #3137.

2020-10-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCC.lex:
	  Improve diagnostics for binary integer literals.

2020-10-14 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/r2k/crt0.s,
	  device/lib/r2ka/crt0.s,
	  device/lib/r3ka/crt0.s,
	  .version:
	  Use a default crt0 that works well on typical Rabbit hardware.
